log/build_2023-11-23_21-08-39/joystick_sub/stderr.log
  File "/home/aiclub/Desktop/TEL_Robot/install/joystick_sub/lib/python3.8/site-packages/joystick_sub/joystick_sub.py", line 92
    ll = np.array(self.aoa_angle.)
                                 ^
SyntaxError: invalid syntax

